depends_compile_tests/tests/fail/derive/operation/enum.rs
use depends::derives::Operation;

#[derive(Operation)]
enum Components {
    Node1 = 1,
}

fn main() {}
