depends_compile_tests/tests/fail/derive/operation/enum.stderr
error: expected `struct`
 --> tests/fail/derive/operation/enum.rs:4:1
  |
4 | enum Components {
  | ^^^^
